@@ -133,6 +133,7 @@ public:
     wxView *GetFirstView() const;
 
     virtual void UpdateAllViews(wxView *sender = (wxView *) NULL, wxObject *hint = (wxObject *) NULL);
+    virtual void NotifyClosing();
 
     // Remove all views (because we're closing the document)
     virtual bool DeleteAllViews();
@@ -183,6 +184,7 @@ public:
     virtual void OnDraw(wxDC *dc) = 0;
     virtual void OnPrint(wxDC *dc, wxObject *info);
     virtual void OnUpdate(wxView *sender, wxObject *hint = (wxObject *) NULL);
+    virtual void OnClosingDocument() {};
     virtual void OnChangeFilename();
 
     // Called by framework if created automatically by the default document
